implementing a queue system to handle notifications in the background

--- a/cart/templates/cart/failure.html
+++ b/cart/templates/cart/failure.html
@@ -28,7 +28,7 @@
                 </svg>
                 Hubo un error en tu intento de transacción, vuelve a intentarlo.
             </h6>
-            <a href="{% url 'cheackout-buy' %}" class="btn btn-dark mt-3">Volver a comprar</a>
+            <a href="{% url 'checkout-buy' %}" class="btn btn-dark mt-3">Volver a comprar</a>
             <a href="{% url 'start-page' %}" class="btn btn-dark mt-3">Ir al inicio</a>
         </div>
     </div>
