--- a/cart/templates/cart/pending.html
+++ b/cart/templates/cart/pending.html
@@ -28,7 +28,7 @@
                 </svg>
                 Tu transacción está siendo verificada, por favor verfica después.
             </h6>
-            <a href="{% url 'cheackout-buy' %}" class="btn btn-dark mt-3">Volver a comprar</a>
+            <a href="{% url 'checkout-buy' %}" class="btn btn-dark mt-3">Volver a comprar</a>
             <a href="{% url 'start-page' %}" class="btn btn-dark mt-3">Ir al inicio</a>
         </div>
     </div>
