fixing content of post-detail with linebreaks

--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -39,7 +39,7 @@
                     </button>
                 </div>
             </div>
-            <p class="lead text-justify" >{{post.content}}</p>
+            <p class="lead text-justify" >{{post.content|linebreaks}}</p>
         </div>
     </div>
 </div>
