--- a/clothes/templates/clothes/includes/footers.html
+++ b/clothes/templates/clothes/includes/footers.html
@@ -27,7 +27,7 @@
           <span><a href="{% url 'start-page' %}" style="color:white;">JOSRAM</a></span>
         </li>
         <li class="ms-3">
-          <a href="#" style="color:white;">kaacuna</a>
+          <a href="https://kaacunaword.com/" style="color:white;">kaacuna</a>
         </li>
         <li class="ms-3">
           <a href="{% url 'change-devolutions'%}" style="color:white;">Política de cambios y devoluciones</a>
